mule-user-guide/v/3.3/setting-up-ldap-provider-for-spring-security.adoc
= 为Spring Security设置LDAP提供程序

本页描述如何配置Spring Security LDAP提供程序，它可以被Mule 2.2或更高版本使用，如下所示：

* 通过 http://www.mulesoft.org/docs/site/current/apidocs/org/mule/module/spring/security/SpringProviderAdapter.html[SpringProviderAdapter]作为其安全提供商
* 执行 link:/mule-user-guide/v/3.3/component-authorization-using-spring-security[组件授权]

有关配置内存提供程序的信息，请参阅 link:/mule-user-guide/v/3.3/configuring-security[配置安全性]。

== 安装

在继续之前，请确保您的项目类路径中包含以下.jar文件：

* 弹簧安全LDAP的3.1.2.RELEASE.jar
* 弹簧安全核 -  3.1.2.RELEASE.jar
* 弹簧LDAP的核 -  1.3.1.RELEASE.jar

== 声明豆

您必须在Spring中设置两个bean，一个 http://static.springsource.org/spring-security/site/docs/3.0.x/apidocs/org/springframework/security/ldap/DefaultSpringSecurityContextSource.html[DefaultSpringSecurityContextSource]和一个 http://static.springframework.org/spring-security/site/docs/3.0.x/apidocs/org/springframework/security/ldap/authentication/LdapAuthenticationProvider.html[LdapAuthenticationProvider可疑]。 `DefaultSpringSecurityContextSource`是用于获取LDAP上下文的接入点，`LdapAuthenticationProvider`提供了与LDAP服务器的集成。例如：

您需要设置一个LDAP上下文源，春季安全身份验证提供程序将使用该源来搜索和验证用户。另外，您需要使用嵌入式LDAP身份验证提供程序定义身份验证管理器，如下所示：

[source, xml, linenums]
----
<mule
      xmlns:ss="http://www.springframework.org/schema/security"
      xmlns:mule-ss="http://www.mulesoft.org/schema/mule/spring-security"
      xmlns:spring="http://www.springframework.org/schema/beans"
      ...
      version="EE-3.3.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      ...
      xsi:schemaLocation="
        http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
        http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
        http://www.mulesoft.org/schema/mule/spring-security http://www.mulesoft.org/schema/mule/spring-security/current/mule-spring-security.xsd
        http://www.springframework.org/schema/security http://www.springframework.org/schema/security/spring-security-3.0.xsd">
...
  <spring:beans>
 
    ...
 
    <spring:bean id="contextSource" class="org.springframework.security.ldap.DefaultSpringSecurityContextSource">
             <spring:constructor-arg value="${ldap.url}"/>
             <spring:property name="userDn" value="${ldap.adminDn}"/>
             <spring:property name="password" value="${ldap.adminPassword}"/>
        </spring:bean>
  
        <ss:authentication-manager alias="authenticationManager">
            <ss:ldap-authentication-provider user-search-filter="(uid={0})" user-search-base="ou=People" group-search-base="ou=Group"/>
        </ss:authentication-manager>
 
 
  </spring:beans>
 
...
----

有关LDAP身份验证提供程序的更多信息以及根据您的LDAP服务器对用户进行身份验证的不同机制可以在此处找到：http://static.springsource.org/spring-security/site/docs/3.1.x/reference/ldap.html 。

== 配置Mule安全提供程序

`SpringSecurityProviderAdapter`委派给`AuthenticationProvider`，例如`LdapAuthenticationProvider`。

[source, xml, linenums]
----
<mule-ss:security-manager>
    <mule-ss:delegate-security-provider name="spring-security-ldap" delegate-ref="authenticationManager"/>
</mule-ss:security-manager>
----

通过上述配置，您可以在需要一个或多个安全提供程序的Mule中实现端点级安全性和其他安全性功能。

== 配置MethodSecurityInterceptor

组件授权的配置与 link:/mule-user-guide/v/3.3/component-authorization-using-spring-security[使用Spring Security的组件授权]中所述的配置类似。配置的关键点是`securityMetadataSource`：

[source, xml, linenums]
----
<property name="securityMetadataSource" value="org.mule.api.lifecycle.Callable.onCall=ROLE_MANAGERS"/>
----

角色由您在前面章节中配置的`DefaultLdapAuthoritiesPopulator`查找。默认情况下，角色的前缀为`ROLE_`，其值会从`groupRoleAttribute`定义的LDAP属性中提取并转换为大写。

== 继续

有关配置内存提供程序的信息，请参阅 link:/mule-user-guide/v/3.4/configuring-security[配置安全性]。
